--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* @font-face {
+    font-family: 'sofia';
+    src: url('./assets/font/Sofia\ Pro\ Regular\ Az.otf') format('otf');
+    font-weight: normal;
+    font-style: normal;
+} */
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+    font-family: "Poppins", sans-serif;
+}
+
+:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
 .primary-c {
     color: #586548;
 }
 
+.sec-c {
+    color: #676767;
+}
+
 .primary-bg {
     background-color: #586548;
+}
+
+.sec-bg {
+    background-color: #EFF5F1;
 }
 
 .primary-btn {
@@ -14,6 +48,18 @@
     border: none;
 }
 
+.g-gradient {
+    background: linear-gradient(90deg, rgba(51, 60, 41, 1) 0%, rgba(82, 94, 70, 1) 50%, rgba(80, 91, 69, 1) 100%);
+}
+
+.h-250{
+    height: 250px;
+}
+
+.border-grey{
+    border-color: #919191!important;
+}
+
 .border-30 {
     border-radius: 30px;
 }
@@ -21,7 +67,7 @@
 .foot-branch {
     background-color: #ffffff40;
     padding: 3px 8px;
-    width: 160px;
+    width: 175px;
     color: #fff !important;
     margin: 20px 0;
 
@@ -61,42 +107,23 @@
     padding: 80px 0;
 }
 
-#test .swiper {
-    padding-top: 100px;
-    margin-top: -100px;
-}
-
-#test .swiper-button-next,
-#test .swiper-button-prev {
-    top: 10%;
-}
-
-#test .swiper-button-prev {
-    top: 10%;
-    left: 90%;
-}
-
-#test .swiper-button-next {
-    top: 10%!important;
-}
-
-.p-head{
+.p-head {
     font-size: 40px;
     font-weight: 500;
 }
 
-.fw-500{
+.fw-500 {
     font-weight: 500;
 }
 
-.fw-600{
+.fw-600 {
     font-weight: 600;
 }
 
-.h-120{
-    height: 120px!important;
+.h-120 {
+    height: 120px !important;
 }
 
-.h-500{
+.h-500 {
     height: 500px;
 }
