--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ span {
     background-color: #EFF5F1;
 }
 
-.ter-bg{
+.ter-bg {
     background-color: #3D4536;
 }
 
@@ -56,12 +56,12 @@ span {
     background: linear-gradient(90deg, rgba(51, 60, 41, 1) 0%, rgba(82, 94, 70, 1) 50%, rgba(80, 91, 69, 1) 100%);
 }
 
-.h-250{
+.h-250 {
     height: 250px;
 }
 
-.border-grey{
-    border-color: #919191!important;
+.border-grey {
+    border-color: #919191 !important;
 }
 
 .border-30 {
@@ -128,28 +128,80 @@ span {
     height: 120px !important;
 }
 
+.h-150 {
+    height: 150px !important;
+}
+
+.h-120 {
+    height: 120px !important;
+}
+
 .h-500 {
     height: 500px;
 }
 
-.border-x{
-    border-left:1px solid #000;
-    border-right:1px solid #000;
-}
-.border-y{
-    border-top:1px solid #000;
-    border-bottom:1px solid #000;
+.h-350 {
+    height: 350px;
 }
 
-.border-lgrey{
+.border-x {
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
+}
+
+.border-y {
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+.border-lgrey {
     border-color: #D9D9D9;
 }
-.h-100px{
+
+.h-100px {
     height: 100px;
 }
 
-.just-align-center{
+.just-align-center {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+/* 
+.sticky-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: all 0.3s ease-in-out;
+    background-color: #ffffff00 !important;
+    backdrop-filter: blur(5px);
+    padding: 0;
+}
+
+.header-wrapper {
+    transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 991px) {
+    .navbar-nav {
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-start !important;
+    }
+} */
+
+.header-wrapper {
+    transition: transform 0.4s ease, opacity 0.4s ease;
+}
+
+.slide-up {
+    transform: translateY(-100%);
+    opacity: 0;
+    background-color: #ffffff00!important;
+}
+
+.slide-down {
+    transform: translateY(0%);
+    opacity: 1;
 }
