--- a/src/App.css
+++ b/src/App.css
@@ -136,6 +136,11 @@ span {
     height: 120px !important;
 }
 
+.hw-100{
+    height: 100px;
+    width: 100px;
+}
+
 .h-500 {
     height: 500px;
 }
@@ -167,6 +172,7 @@ span {
     justify-content: center;
     align-items: center;
 }
+
 /* 
 .sticky-header {
     position: fixed;
@@ -193,12 +199,14 @@ span {
 
 .header-wrapper {
     transition: transform 0.4s ease, opacity 0.4s ease;
+    background-color: rgb(255 255 255 / 0%) !important;
+    backdrop-filter: blur(5px) !important;
 }
 
 .slide-up {
     transform: translateY(-100%);
     opacity: 0;
-    background-color: #ffffff00!important;
+    background-color: #ffffff00 !important;
 }
 
 .slide-down {
