--- a/src/pages/results/Results.css
+++ b/src/pages/results/Results.css
@@ -35,7 +35,35 @@
   }
 }
 
-#result .card{
-    background-color: #F5F5F5;
-    border: none!important;
+#result .card {
+  background-color: #f5f5f5;
+  border: none !important;
+}
+
+#result .modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000cb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  --bs-backdrop-opacity: 1;
+}
+
+#result .modal-content {
+  background: #fff;
+  max-width: 1000px;
+  width: 100%;
+  height: fit-content;
+  border-radius: 15px;
+}
+
+.promo{
+  background: url(../../assets/promo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
