--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* @font-face {
     font-family: 'sofia';
@@ -16,161 +16,165 @@ h5,
 h6,
 p,
 span {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 :focus {
-    outline: none !important;
-    box-shadow: none !important;
+  outline: none !important;
+  box-shadow: none !important;
 }
 
 .primary-c {
-    color: #586548;
+  color: #586548;
 }
 
 .sec-c {
-    color: #676767;
+  color: #676767;
 }
 
 .primary-bg {
-    background-color: #586548;
+  background-color: #586548;
 }
 
 .sec-bg {
-    background-color: #EFF5F1;
+  background-color: #eff5f1;
 }
 
 .ter-bg {
-    background-color: #3D4536;
+  background-color: #3d4536;
 }
 
 .primary-btn {
-    background-color: #586548;
-    color: #fff;
-    border-radius: 500px;
-    padding: 10px;
-    border: none;
+  background-color: #586548;
+  color: #fff;
+  border-radius: 500px;
+  padding: 10px;
+  border: none;
 }
 
 .g-gradient {
-    background: linear-gradient(90deg, rgba(51, 60, 41, 1) 0%, rgba(82, 94, 70, 1) 50%, rgba(80, 91, 69, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(51, 60, 41, 1) 0%,
+    rgba(82, 94, 70, 1) 50%,
+    rgba(80, 91, 69, 1) 100%
+  );
 }
 
 .h-250 {
-    height: 250px;
+  height: 250px;
 }
 
 .border-grey {
-    border-color: #919191 !important;
+  border-color: #919191 !important;
 }
 
 .border-30 {
-    border-radius: 30px;
+  border-radius: 30px;
 }
 
 .foot-branch {
-    background-color: #ffffff40;
-    padding: 3px 8px;
-    width: 175px;
-    color: #fff !important;
-    margin: 20px 0;
-
+  background-color: #ffffff40;
+  padding: 3px 8px;
+  width: 175px;
+  color: #fff !important;
+  margin: 20px 0;
 }
 
 .f-link {
-    color: #ffffff90;
-    border-bottom: 1px solid #ffffff90;
-    padding-bottom: 30px;
+  color: #ffffff90;
+  border-bottom: 1px solid #ffffff90;
+  padding-bottom: 30px;
 }
 
 .column-3 {
-    column-count: 3;
+  column-count: 3;
 }
 
 #footer p {
-    color: #fff;
+  color: #fff;
 }
 
 #footer h6 {
-    color: #A2AC99;
-    line-height: 1.8;
-    font-weight: 400;
+  color: #a2ac99;
+  line-height: 1.8;
+  font-weight: 400;
 }
 
 #footer ul li {
-    color: #A2AC99 !important;
-    font-weight: 400;
-    padding: 2px 0;
+  color: #a2ac99 !important;
+  font-weight: 400;
+  padding: 2px 0;
 }
 
 .border-none {
-    border: none;
+  border: none;
 }
 
 .sec-pad {
-    padding: 80px 0;
+  padding: 80px 0;
 }
 
 .p-head {
-    font-size: 40px;
-    font-weight: 500;
+  font-size: 40px;
+  font-weight: 500;
 }
 
 .fw-500 {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .fw-600 {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .h-120 {
-    height: 120px !important;
+  height: 120px !important;
 }
 
 .h-150 {
-    height: 150px !important;
+  height: 150px !important;
 }
 
 .h-120 {
-    height: 120px !important;
+  height: 120px !important;
 }
 
-.hw-100{
-    height: 100px;
-    width: 100px;
+.hw-100 {
+  height: 100px;
+  width: 100px;
 }
 
 .h-500 {
-    height: 500px;
+  height: 500px;
 }
 
 .h-350 {
-    height: 350px;
+  height: 350px;
 }
 
 .border-x {
-    border-left: 1px solid #000;
-    border-right: 1px solid #000;
+  border-left: 1px solid #000;
+  border-right: 1px solid #000;
 }
 
 .border-y {
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
 }
 
 .border-lgrey {
-    border-color: #D9D9D9;
+  border-color: #d9d9d9;
 }
 
 .h-100px {
-    height: 100px;
+  height: 100px;
 }
 
 .just-align-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* 
@@ -198,18 +202,52 @@ span {
 } */
 
 .header-wrapper {
-    transition: transform 0.4s ease, opacity 0.4s ease;
-    background-color: rgb(255 255 255 / 0%) !important;
-    backdrop-filter: blur(5px) !important;
+  transition: transform 0.4s ease, opacity 0.4s ease;
+  background-color: rgb(255 255 255 / 0%) !important;
+  backdrop-filter: blur(5px) !important;
 }
 
 .slide-up {
-    transform: translateY(-100%);
-    opacity: 0;
-    background-color: #ffffff00 !important;
+  transform: translateY(-100%);
+  opacity: 0;
+  background-color: #ffffff00 !important;
 }
 
 .slide-down {
-    transform: translateY(0%);
-    opacity: 1;
+  transform: translateY(0%);
+  opacity: 1;
 }
+
+@media (min-width: 768px) {
+  .column-md-3 {
+    column-count: 3;
+  }
+  .w-md-75{
+    width: 75%;
+  }
+}
+
+@media (max-width: 768px) {
+  .sec-pad {
+    padding: 60px 0;
+  }
+  #booknow {
+    left: 0% !important ;
+    bottom: 0% !important;
+    border-radius: 0px !important;
+    padding: 10px 0 !important;
+    width: 100% !important;
+    height: fit-content !important;
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none !important;
+  }
+  .fs-sm-1 {
+    font-size: 2rem !important;
+  }
+  .h-fit-content {
+    height: fit-content!important;
+  }
+}
+
