Result and Service mobile version

--- a/src/App.css
+++ b/src/App.css
@@ -223,11 +223,23 @@ span {
     column-count: 3;
   }
   .w-md-75{
-    width: 75%;
+    width: 75%!important;
+  }
+  .w-md-50{
+    width: 50%!important;
+  }
+  .rounded-md-4{
+    border-radius: 1rem;
   }
 }
 
 @media (max-width: 768px) {
+  .position-sm-static{
+    position: static!important;
+  }
+  .h-sm-fit-content{
+    height: fit-content!important;
+  }
   .sec-pad {
     padding: 60px 0;
   }
